--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ section{
     padding: 20px 30px;
 }
 
+section.less-padd{
+    padding: 5px 30px 20px;
+}
+
 /* Transizione unica */
 .transition{
     overflow: hidden;
@@ -27,7 +31,7 @@ section{
     border: 2px solid yellow;
     box-shadow: 0 0 20px 0 #ff073a;
     text-shadow: 0 0 5px yellow;
-    transition: transform 0.4s,background-color 0.4s, box-shadow 0.4s, text-shadow 0.4s;
+    transition: transform 0.4s,background-color 0.4s, box-shadow 0.4s, text-shadow 0.4s, opacity 1s;
 }
 .transition:hover{
     transform: scale(1.1);
@@ -58,7 +62,7 @@ section{
 
 /* Proprietà header */
 header{
-    padding: 30px 20px;
+    padding: 25px 20px 20px;
     text-align: center;
     min-height: 170px;
 }
@@ -66,13 +70,29 @@ header h1{
     /* box-shadow: 0 0 10px 0 red!important; */
     font-size: 50px;
     width: 500px;
-    margin: auto;
+    margin: 0 auto 20px;
     border-radius: 10px;
     padding: 20px 10px;
 }
 
 header h1:hover{
     transform: scale(1.03)!important;
+}
+
+/* Select difficoltà */
+#difficolta{
+    font-size: 15px;
+    background-color: transparent;
+    color: white;
+    border: 2px solid yellow;
+    border-radius: 5px;
+    outline: none;
+    text-shadow: 0 0 5px yellow;
+    padding: 2px;
+}
+
+#difficolta option{
+    color: black;
 }
 
 /* Sezione start */
@@ -145,21 +165,20 @@ section h2{
 }
 
 section:last-child{
-    padding: 0;
+    padding: 0 20px;
 }
 
 #winLosePoints{
+    cursor: default;
     opacity: 0;
-    transition: opacity 1s;
     font-size: 30px;
     /* position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
     max-width: 400px;
-    border: 2px solid yellow;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    margin: auto;
+    margin: 40px auto;
 }
