BONUS: es. completamente funzionante con input HTML (NON Ottimizzato)

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,38 @@ section h2{
     padding: 10px;
 }
 
+.number-in{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#numeroUtente{
+    display: inline-block;
+    background-color: black;
+    border: 2px solid yellow;
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: white;
+    outline: none;
+    transition: box-shadow 0.4s;
+    margin-right: 10px;
+}
+#numeroUtente:active, #numeroUtente:hover, #numeroUtente:focus{
+    box-shadow: 0 0 20px 0 #ff073a;
+}
+
+#calcola{
+    margin-left: 10px;
+    padding: 3px;
+    border-radius: 5px;
+    outline: none;
+    width: 70px;
+    box-shadow: 0 0 4px 0 #ff073a;
+}
+#calcola:hover{
+    box-shadow: 0 0 20px 2px #ff073a;
+}
+
 .numList{
     display: flex;
     justify-content: flex-start;
@@ -214,6 +246,7 @@ section h2{
 
 #numPC li{
     margin: 0;
+    transition: margin 0.4s, height 0.4s, width 0.4s;
 }
 
 @media all and (max-width: 991px){
